--- a/data/equipment/armor-12-QJNyQlmPNzIrnuLf.htm
+++ b/data/equipment/armor-12-QJNyQlmPNzIrnuLf.htm
@@ -17,8 +17,8 @@ Nom: Bouclier brise-mâchoires
 <p>Lorsque vous tenez le bouclier brise-mâchoires, vous bénéficiez d'un bonus d'objet de +3 à votre DC de Réflexes pour résister aux attaques @Compendium[pf2e.bestiary-ability-glossary-srd.uJSseLa57HZYSMUu]{Gober}.</p>
 <hr />
 <p><strong>Activate</strong> <span style="font-family : 'Pathfinder2eActions' ; font-size : 1.8em ; display : inline;">R</span> Interact</p>
-<p><strong>Déclencheur</strong> Une créature vous attaque avec une morsure de dents ou de crocs ou un coup similaire en utilisant sa bouche</p>
+<p><strong>Déclencheur</strong> Une créature vous attaque utilisant sa mâchoire, une morsure de dents ou de crocs ou un coup similaire en utilisant sa bouche</p>
 <p><strong>Effet</strong> Vous effectuez un @Compendium[pf2e.equipment-srd.ZhxxqYpVdVx0jSMm]{Coup de bouclier} en réaction contre l'attaquant. Si le coup de bouclier touche, la cible subit des dégâts et doit tenter un jet de sauvegarde de Vigueur DC 31. Les effets du jet de sauvegarde sont déterminés après que les effets de la frappe de déclenchement ont été résolus.</p>
 <p><strong>Succès</strong> La cible n'est pas affectée.</p>
-<p><strong>Failure</strong> Vous blessez la bouche de la cible. Elle subit 1d6 dégâts de saignement persistants et subit une pénalité d'état de -2 aux jets d'attaque et de dégâts de morsures ou des coups similaires, pendant 24 heures</p>
-<p><strong>Échec critique</strong> Vous brisez la mâchoire de la cible. En cas d'échec, la créature ne peut plus mordre pendant 1 minute. À la fin de son tour, elle peut tenter un jet de sauvegarde de Vigueur pour regagner la capacité d'attaque de morsure.</p>
+<p><strong>Failure</strong> Vous blessez la bouche de la cible. Elle subit 1d6 dégâts de saignement persistants et subit une pénalité d'état de -2 aux jets d'attaque et de dégâts aux attaques de mâchoires ou des coups similaires, pendant 24 heures</p>
+<p><strong>Échec critique</strong> Vous brisez la mâchoire de la cible. En cas d'échec, la créature ne peut plus mordre ni utiliser ni attaquer avec sa mâchoire pendant 1 minute. À la fin de son tour, elle peut tenter un jet de sauvegarde de Vigueur pour regagner la capacité d'attaque de mâchoire.</p>
