--- a/data/backgrounds/GPI5kNu0xfom9kKa.htm
+++ b/data/backgrounds/GPI5kNu0xfom9kKa.htm
@@ -9,6 +9,6 @@ Nom: Spécialiste des dragons
 <p>You're trained in the Intimidation skill, and the Dragon Lore skill. You gain the @Compendium[pf2e.feats-srd.xQMz6eDgX75WX2ce]{Intimidating Glare} skill feat.</p>
 ------ Description (fr) ------
 <p>Aussi loin que remontent vos souvenirs, les dragons vous ont toujours fasciné. Leur puissance, leur longévité, les anciennes traditions qui s’inspirent d’eux... peu importe ce qui a éveillé votre intérêt, jusqu’à présent vous avez passé la majeure partie de votre vie immergé dans tout ce qui concerne les dragons. Ces études ont renforcé votre confiance en vous et vous ont doté d’un vaste éventail de méthodes et de tactiques pour imposer votre volonté à autrui.</p>
-<p>Vous avez probablement répondu à l’Appel aux héros pour récolter des fonds en tant qu’aventurier afin d’acheter de nouveaux textes sur les dragons ou peut-être pour en rencontrer un en chair et en os.</p>
+<p>Vous avez probablement répondu à l’Appel aux héros pour récolter des fonds en tant qu’aventurier afin d’acheter de nouveaux textes sur les dragons voire en rencontrer un en chair et en os.</p>
 <p>Choisissez deux primes de caractéristiques. Une de ces primes doit être de <strong>Force</strong> ou de <strong>Charisme</strong> et l’autre est une prime de caractéristique libre.</p>
 <p>Vous êtes qualifié dans les compétences Intimidation et Connaissance des dragons. Vous gagnez le don de compétence @Compendium[pf2e.feats-srd.xQMz6eDgX75WX2ce]{Regard intimidant}.
