--- a/data/backgrounds/HKRcQO8Xj7xzBxAw.htm
+++ b/data/backgrounds/HKRcQO8Xj7xzBxAw.htm
@@ -9,7 +9,7 @@ Nom: Opportuniste des Factions
 <hr />
 <p><strong>Special</strong>: You can select this background only if you have earned credit for at least 5 First Edition scenarios from Season 9 of the Pathfinder Society organized play campaign.</p>
 ------ Description (fr) ------
-<p>Alors que l'influence de la Société des Éclaireurs a grandi, il en a été de même de ses factions devenues plus riches et puissantes. Ces factions comptent sur un nombre d'Éclaireurs et d'agents indépendants à la fois pour établir un réseau de commerce, influer sur les politiques nationales et plus encore et vous figurez parmi les spécialistes qui ont aidé ces factions à réaliser ses objectifs. Ces évènements vous ont fourni nombre d'opportunités pour développer vos propres contacts et vos compétences pour négocier.</p>
+<p>Alors que l'influence de la Société des Éclaireurs a grandi, il en a été de même de ses factions devenues plus riches et plus puissantes. Ces factions comptent sur un nombre d'Éclaireurs et d'agents indépendants à la fois pour établir un réseau de commerce, influer sur les politiques nationales et plus encore. Vous figurez parmi les spécialistes qui ont aidé ces factions à réaliser ses objectifs. Ces événements vous ont fourni nombre d'opportunités pour développer vos propres contacts et vos compétences pour négocier.</p>
 <p>Choisissez deux primes de caractéristiques. Une de ces primes doit être <strong>Intelligence</strong> ou <strong>Sagesse</strong>, et l’autre est une prime de caractéristique libre.<br /></p>
 <p>Vous êtes qualifié dans la compétence Diplomatie et soit Connaissance d'une Guilde, de l'héraldique  ou des affaires. Vous gagnez le don de compétence @Compendium[pf2e.feats-srd.4RjDxgvNXNl5GG9d]{Animal social}.</p>
 <hr />
