--- a/data/backgrounds/HZ3oBBdEnsH3fWrm.htm
+++ b/data/backgrounds/HZ3oBBdEnsH3fWrm.htm
@@ -22,7 +22,7 @@ Nom: Chercheur Rivain
 <li>@Compendium[pf2e.feats-srd.YvoiGWZhtbHH6NMF]{Specialty Crafting (Woodworking)}</li>
 </ul>
 ------ Description (fr) ------
-<p>Vous avez dédié votre vie à résoudre les secrets de l'antique Empire Rivain, soit au travers de recherches méticuleuses, soit en voyageant dans des ruines dangereuses et lintaines pour retrouver la trace d'artefacts depuis longtemps perdus.</p>
+<p>Vous avez dédié votre vie à résoudre les secrets de l'antique Empire Rivain, soit au travers de recherches méticuleuses, soit en voyageant dans des ruines dangereuses et lointaines pour retrouver la trace d'artefacts depuis longtemps perdus.</p>
 <p>Choisissez deux primes de caractéristique. La première doit être de <strong>Dextérité</strong> ou d'<strong>Intelligence</strong> et l'autre est libre.</p>
 <p>Vous êtes qualifié en Artisanat et en Connaissance Rivaine. Vous obtenez le don de compétence Artisanat.</p>
 <hr />
