--- a/data/backgrounds/I0vuIFypx8ADSJQC.htm
+++ b/data/backgrounds/I0vuIFypx8ADSJQC.htm
@@ -11,6 +11,6 @@ Nom: Contrebandier du Marché noir
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Route dorée</p>
 <hr />
-<p>Vous savez comment travailler du côté moins que légal des marchés de la région et comment glisser de la contrebande sous le nez des autorités.</p>
+<p>Vous savez comment travailler du côté moins-que-légal des marchés de la région et comment glisser de la contrebande sous le nez des autorités.</p>
 <p>Choisissez deux primes de caractéristiques. La première doit être de <strong>Sagesse</strong> ou de <strong>Charisme</strong> et l'autre est une prime de caractéritique libre.</p>
 <p>Vous êtes qualifié en Discrétion et en Connaissance de la pègre. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.t3btih0O5RUwWynt]{Contrebandier expérimenté}.</p>
