--- a/data/backgrounds/i6y4DiKvqitdE0PW.htm
+++ b/data/backgrounds/i6y4DiKvqitdE0PW.htm
@@ -11,6 +11,6 @@ Nom: Rapide
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Terres impossibles</p>
 <hr />
-<p>Rester en vie parmi les morts-vivants sournois et affamés du Geb a requis une profonde connaissance de leurs motivations, de leurs capacités et de leurs faiblesses. Plus souvent que le contraire, cela a aussi nécessité la capacité d'inventer des alibis et des demi-vérités préservant la vie capables de faire flancher un cœur arrêté.</p>
+<p>Rester en vie parmi les morts-vivants sournois et affamés du Geb a requis une profonde connaissance de leurs motivations, de leurs capacités et de leurs faiblesses. Bien souvent, cela a aussi nécessité la capacité d'inventer des alibis et des demi-vérités pour influencer leurs coeurs éteints.</p>
 <p>Choisissez deux augmentations de caractéristiques. L'une doit être de <strong>Charisme</strong> ou de <strong>Constitution</strong> et l'autre est libre.</p>
 <p>Vous êtes qualifié en Duperie et en Connaissance des morts-vivants. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.B6HbYsLBWb1RR6Fx]{Menteur charismatique}.</p>
