--- a/data/backgrounds/iWWg16f3re1YChiD.htm
+++ b/data/backgrounds/iWWg16f3re1YChiD.htm
@@ -1,5 +1,5 @@
 Name: Oenopion-Ooze Tender
-Nom: Éleveur de vases d'œnopion 
+Nom: Éleveur de vases d'Oenopion 
 État: libre
 
 ------ Description (en) ------
@@ -11,6 +11,6 @@ Nom: Éleveur de vases d'œnopion
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Terres impossibles</p>
 <hr />
-<p>Votre apprentissage dans l'une des académies arcaniques ou alchimiques peu orthodoxes d'Oenopion vous a instillé un réservoir profond de connaissances ésotériques principalement pragmatique, sans faire mention du profond ressentiment né d'heures innombrables passées à nourrir et à nettoyer les créatures pour nourrir les gelées et les puddings gélatineux affâmés.</p>
+<p>Votre apprentissage dans l'une des académies arcaniques ou alchimiques peu orthodoxes d'Oenopion vous a instillé un réservoir profond de connaissances ésotériques principalement pragmatiques, sans faire mention du profond ressentiment né d'innombrables heures passées à nourrir et à nettoyer les créatures pour soigner les gelées et les puddings gélatineux affâmés.</p>
 <p>Choisissez deux primes de caractéristiques. La première doit être de <strong>Constitution</strong> ou d'<strong>Intelligence</strong> et l'autre est libre.</p>
-<p>Vous êtes qualifié en Artisanat et en Connaissance des vases Ooze. Bous obtenez le don de compétence @Compendium[pf2e.feats-srd.1Bt7uCW2WI4sM84P]{Savoir douteux}.</p>
+<p>Vous êtes qualifié en Artisanat et en Connaissance des Vases. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.1Bt7uCW2WI4sM84P]{Savoir douteux}.</p>
