--- a/data/backgrounds/ixluAGUDZciLEHtb.htm
+++ b/data/backgrounds/ixluAGUDZciLEHtb.htm
@@ -7,6 +7,6 @@ Nom: Percepteur
 <p>Choose two ability boosts. One must be to <strong>Strength</strong> or <strong>Charisma</strong>, and one is a free ability boost.</p>
 <p>You're trained in the Intimidation skill and the Lore skill for the settlement that employed you. You gain the @Compendium[pf2e.feats-srd.ar2DUlvDK4LDcH9J]{Quick Coercion} skill feat.</p>
 ------ Description (fr) ------
-<p>Vilipendé mais nécessaire, vous avez été envoyé lorsque les impôts n'étaient pas réglés. Effectuer votre travail pourrait vous avoir amené à voyager et à faire preuve de persuasion à moins que vous n'ayez été responsable de la collecte des taxes sur le commerce. Quoi qu'il en soit, cela signifie qu'il vous a fallu quelquefois vous salir les mains et partir à l'aventure vous a semblé la prochaine chose logique à faire.</p>
+<p>Vilipendé mais nécessaire, vous avez été envoyé récolter les impôts non payés. Effectuer votre travail pourrait vous avoir amené à voyager et à faire preuve de persuasion à moins que vous n'ayez été responsable de la collecte des taxes sur le commerce. Quoi qu'il en soit, cela signifie qu'il vous a fallu quelquefois vous salir les mains. Partir à l'aventure vous a semblé la prochaine chose logique à faire.</p>
 <p>Choisissez deux primes de caractéristiques. La première doit être de <strong>Force</strong> ou de <strong>Charisme</strong> et l'autre est libre.</p>
 <p>Vous êtes qualifié en Intimidation et en Connaissance de la communauté qui vous a employé. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.ar2DUlvDK4LDcH9J]{Contrainte rapide}.</p>
