--- a/data/backgrounds/JfGVkZkaoz2lnmov.htm
+++ b/data/backgrounds/JfGVkZkaoz2lnmov.htm
@@ -1,5 +1,5 @@
 Name: Bright Lion
-Nom: Lion brillant
+Nom: Lion Brillant
 État: libre
 
 ------ Description (en) ------
@@ -11,6 +11,6 @@ Nom: Lion brillant
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Étendues du Mwangi</p>
 <hr />
-<p>Vous êtes membre des Lions brillants et cherchez à renverser le règne tyrannique de Walkena et à libérer Mzali de ses cruels caprices. Vous avez l'expérience pour opérer sous couverture et avez eu à être prudent quand à ce que vous dites et à qui vous pouvez faire confiance, pour ne pas tomber aux mains ni subir les terribles punitions du Dieu-Roi.</p>
+<p>Vous êtes membre des Lions Brillants et cherchez à renverser le règne tyrannique de Walkena et à libérer Mzali de ses cruels caprices. Vous avez l'expérience pour opérer sous couverture et vous avez dû faire attention à ce que vous dites et à qui vous pouviez faire confiance, pour ne pas tomber aux mains du Dieu-Roi ni subir ses terribles punitions .</p>
 <p>Choisissez deux primes de caractéristiques. La première doit être de <strong>Force </strong> ou de <strong>Charisme</strong> et l'autre est libre.</p>
 <p>Vous êtes qualifié en Duperie et en Connaissances de Mzali. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.Dvz54d6aPhjsmUux]{Détecteur de mensonges}.</p>
