--- a/data/equipment/weapon-00-9O3uPHfQvCK76eIZ.htm
+++ b/data/equipment/weapon-00-9O3uPHfQvCK76eIZ.htm
@@ -5,4 +5,4 @@ Nom: Fouet-griffe
 ------ Description (en) ------
 <p>The whip claw is a long tether affixed to clawlike daggers, allowing the wielder to fling and retract them with deadly precision. Catfolk developed this weapon to provide extended reach when hunting dangerous animals and wield them with unmatched expertise.</p>
 ------ Description (fr) ------
-<p>Le fouet-griffe est une longue courroie attachée à des dagues ressemblant à des griffes, permettant à l'utilisateur de les lancer et les ramener avec une précision mortelle. Les félides ont développé cette arme pour pouvoir augmenter leur portée d'attaque quand ils chassent des animaux dangereux, et ils la manient avec une expertise inégalée.</p>
+<p>Le Fouet-griffe est une longue courroie attachée à des dagues ressemblant à des griffes, permettant à l'utilisateur de les lancer et les ramener avec une précision mortelle. Les félides ont développé cette arme pour augmenter leur portée d'attaque quand ils chassent des animaux dangereux, et ils la manient avec une expertise inégalée.</p>
