--- a/data/backgrounds/lRVYgV9zL6O6O3U4.htm
+++ b/data/backgrounds/lRVYgV9zL6O6O3U4.htm
@@ -7,6 +7,6 @@ Nom: Disciple martial (Acrobatie)
 <p>Choose two ability boosts. One must be to <strong>Strength</strong> or <strong>Dexterity</strong>, and one is a free ability boost.</p>
 <p>You're trained in the Acrobatics skill and the Warfare Lore skill. You gain the @Compendium[pf2e.feats-srd.LQw0yIMDUJJkq1nD]{Cat Fall} skill feat.</p>
 ------ Description (fr) ------
-<p>Vous vous êtes dédié vous-même à un entraînement intense et une étude rigoureuse pour devenir un grand combattant. L'École à laquelle vous appartenez pourrait avoir été un monastère traditionaliste, une académie militaire d'élite ou la branche locale d'une organisation mercenaire prestigieuse.</p>
+<p>Vous vous êtes dédié à un entraînement intense et une étude rigoureuse pour devenir un grand combattant. L'École à laquelle vous appartenez pourrait avoir été un monastère traditionaliste, une académie militaire d'élite ou la branche locale d'une organisation mercenaire prestigieuse.</p>
 <p>Choisissez deux primes de caractéristique. La première doit être de <strong>Force</strong> ou <strong>Dextérité</strong> et la seconde est un prime de caractéristique libre.</p>
 <p>Vous êtes qualifié dans la compétence Acrobatie et Connaissance de la guerre. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.LQw0yIMDUJJkq1nD]{Chute féline}.</p>
