--- a/data/backgrounds/LwAu4r3uocYfpKA8.htm
+++ b/data/backgrounds/LwAu4r3uocYfpKA8.htm
@@ -7,6 +7,6 @@ Nom: Pionnier
 <p>Choose two ability boosts. One must be to <strong>Constitution</strong> or <strong>Wisdom</strong>, and one is a free ability boost.</p>
 <p>You're trained in the Survival skill and the Cartography Lore skill. You gain the @Compendium[pf2e.feats-srd.4tTkRyOQ0VuRBac3]{Terrain Expertise} skill feat with one terrain you've explored (such as forest or underground).</p>
 ------ Description (fr) ------
-<p>Les domaines inexplorés vous ont toujours intrigué et vous avez exploré et cartographié de grands territoires au service des commerçants, des gouvernements ou de votre propre curiosité. Là où certains voient un point vide sur une carte, vous voyez le potentiel de quelque chose de nouveau et d'inédit.</p>
+<p>Les domaines inexplorés vous ont toujours intrigué et vous avez exploré et cartographié de grands territoires au service des commerçants, des gouvernements ou pour assouvir votre propre curiosité. Là où certains voient un point vide sur une carte, vous voyez le potentiel de quelque chose de nouveau et d'inédit.</p>
 <p>Choisissez deux primes de caractéristiques. Une de ces primes doit être de <strong>Constitution</strong> ou de <strong>Sagesse</strong> et l'autre est libre.</p>
 <p>Vous êtes qualifié dans les compétences de Survie et Connaissance de la cartographie. Vous gagnez le don de compétence @Compendium[pf2e.feats-srd.4tTkRyOQ0VuRBac3]{Expertise du terrain} avec un terrain que vous avez déjà exploré.</p>
