--- a/data/backgrounds/m1vRLRHTpCrgk89G.htm
+++ b/data/backgrounds/m1vRLRHTpCrgk89G.htm
@@ -11,6 +11,6 @@ Nom: Loyaliste Thrune
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Ancien Chéliax</p>
 <hr />
-<p>En dépit des revers dont le Chéliax a récemment souffert, votre loyauté va à la Maison Thrune adossée aux diables. Vous considérez que la reine actuelle est la dirigeante légitime de votre patrie et vous voulez agir contre ses ennemis.</p>
+<p>En dépit des revers dont le Chéliax a récemment souffert, votre loyauté va à la Maison Thrune soutenus par les diables. Vous considérez que la reine actuelle est la dirigeante légitime de votre patrie et vous voulez agir contre ses ennemis.</p>
 <p>Choisissez deux primes de caractéristiques. La première doit être d'<strong>Intelligence </strong>ou de <strong>Charisme</strong> et l'autre est libre.</p>
 <p>Vous êtes qualifié en Religion et en Connaissance des Enfers. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.x7EMZNMavris2aHY]{Étudiant du droit Canon}.</p>
