oubli de modifier l'état de l'enquêteur

--- a/data/classes/4wrSCyX6akmyo7Wj.htm
+++ b/data/classes/4wrSCyX6akmyo7Wj.htm
@@ -1,7 +1,6 @@
 Name: Investigator
 Nom: Enquêteur
-État: changé
-État d’origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><em>You seek to uncover the truth, doggedly pursuing leads to reveal the plots of devious villains, discover ancient secrets, or unravel other mysteries. Your analytical mind quickly formulates solutions to complicated problems and your honed senses identify even the most obscure clues. Wielding knowledge as a weapon, you study the creatures and dangers you encounter to exploit their weaknesses.</em></p>
