--- a/data/backgrounds/moVRsnpjB5THCwxE.htm
+++ b/data/backgrounds/moVRsnpjB5THCwxE.htm
@@ -7,6 +7,6 @@ Nom: Enfant des rues
 <p>Choose two ability boosts. One must be to <strong>Dexterity</strong> or <strong>Constitution</strong>, and one is a free ability boost.</p>
 <p>You're trained in the Thievery skill and a Lore skill for the city you lived in as a street urchin (such as Absalom Lore or Magnimar Lore). You gain the @Compendium[pf2e.feats-srd.jDdOqFmZLwE4dblQ]{Pickpocket} skill feat.</p>
 ------ Description (fr) ------
-<p>Vous vous efforciez de survivre en faisant les poches des passants dans les artères d’une grande ville, sans jamais savoir quand serait votre prochain repas. Si certaines personnes se tournent vers l’aventure pour la gloire, c’est pour vous une question de survie.</p>
+<p>Vous vous efforciez de survivre en faisant les poches aux passants dans les artères d’une grande ville, sans jamais savoir quand serait votre prochain repas. Si certaines personnes se tournent vers l’aventure pour la gloire, pour vous c'ests une question de survie.</p>
 <p>Choisissez deux primes de caractéristiques. Une de ces primes doit être de <strong>Dextérité</strong> ou de <strong>Constitution</strong> et l’autre est libre.</p>
 <p>Vous êtes qualifié dans la compétence Vol et une compétence de Connaissance correspondant à la cité dans laquelle vous avez vécu comme enfant des rues (comme Connaissance d’Absalom ou Connaissance de Magnimar). Vous gagnez le don de compétence @Compendium[pf2e.feats-srd.jDdOqFmZLwE4dblQ]{Vol à la tire}.</p>
