--- a/data/backgrounds/mrkgVjiEdlPjLUsN.htm
+++ b/data/backgrounds/mrkgVjiEdlPjLUsN.htm
@@ -11,6 +11,6 @@ Nom: Réformateur vidrien
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Étendues du Mwangi</p>
 <hr />
-<p>Vous savez que le seul moyen pour que votre patrie, la Vidrie, puisse rester libre des conquérants de l'extérieur, consiste à forger un gouvernement puissant et unifié. Comme tel, vous cherchez à lier vos concitoyens ensemble par le biais d'une diplomatie soigneuse et la force de votre personnalité ; ou, lorsque c'est necessaire, par le subterfuge et l'intrigue.</p>
+<p>Vous savez que le seul moyen pour que votre patrie, la Vidrie, puisse rester libre des conquérants de l'extérieur, consiste à forger un gouvernement puissant et unifié. Dans ce but, vous cherchez à rassembler vos concitoyens par le biais d'une diplomatie prudente et la force de votre personnalité ; ou, lorsque c'est necessaire, par le subterfuge et l'intrigue.</p>
 <p>Choisissez deux améliorations de caractéristiques. La première doit être de <strong>Dextérité </strong>ou de <strong>Charisme</strong> et l'autre est libre.</p>
 <p>Vous êtes qualifié en Diplomatie et en Connaissance de la politique. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.4RjDxgvNXNl5GG9d]{Animal social}</p>
