--- a/data/backgrounds/MslumKt6iwJ85GKZ.htm
+++ b/data/backgrounds/MslumKt6iwJ85GKZ.htm
@@ -11,6 +11,6 @@ Nom: Unificateur de Thuvie
 ------ Description (fr) ------
 <p><strong>Prérequis</strong> Région - Route dorée</p>
 <hr />
-<p>Vous croyez que les Cités États de Thuvie devraient s'unir en une nation sous le règne de la Cité qui est votre foyer (la plupart du temps Aspenthar) et vous voulez faire tout ce qui doit l'être pour le réaliser.</p>
+<p>Vous croyez que les Cités États de Thuvie devraient s'unir en une nation sous le règne de la Cité qui est votre foyer (la plupart du temps Aspenthar) et vous voulez faire tout ce qui est possible pour le réaliser.</p>
 <p>Choisissez deux primes de caractéristiques. La première doit être de <strong>Force</strong> ou de <strong>Charisme</strong> et l'autre est une prime de caractéristique libre.</p>
 <p>Vous êtes qualifié en Intimidation et en Connaissance de la politique. Vous obtenez le don de compétence @Compendium[pf2e.feats-srd.ar2DUlvDK4LDcH9J]{Contrainte rapide}.</p>
