révision des actions

--- a/data/actions/49y9Ec4bDii8pcD3.htm
+++ b/data/actions/49y9Ec4bDii8pcD3.htm
@@ -1,7 +1,6 @@
 Name: Subsist
 Nom: Subsister
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You try to provide food and shelter for yourself, and possibly others as well, with a standard of living. The GM determines the DC based on the nature of the place where you're trying to Subsist. You might need a minimum proficiency rank to Subsist in particularly strange environments. Unlike most downtime activities, you can Subsist after 8 hours or less of exploration, but if you do, you take a -5 penalty.</p>
@@ -18,7 +17,7 @@ Nom: Subsister
 <li><strong>Legendary</strong> barren wasteland or city of undead</li>
 </ul>
 ------ Description (fr) ------
-<p>Vous tentez d’obtenir de la nourriture et un abri pour vous et potentiellement aussi pour d’autres, selon un niveau de vie décrit en page 294. Le MJ détermine le DD en fonction de la nature de l’endroit où vous tentez de Subsister. Un rang de maîtrise minimum peut être nécessaire pour Subsister dans des environnements particulièrement étranges. Au contraire de la plupart des activités d’intermède, vous pouvez Subsister après huit heures ou moins d’exploration mais vous subissez dans ce cas un malus de −5.</p>
+<p>Vous tentez d’obtenir de la nourriture et un abri pour vous et potentiellement aussi pour d’autres, selon un certain niveau de vie. Le MJ détermine le DD en fonction de la nature de l’endroit où vous tentez de Subsister. Un rang de maîtrise minimum peut être nécessaire pour Subsister dans des environnements particulièrement étranges. Au contraire de la plupart des activités d’intermède, vous pouvez Subsister après huit heures ou moins d’exploration mais vous subissez dans ce cas un malus de −5.</p>
 <hr />
 <p><strong>Succès critique</strong> Vous fournissez de quoi vivre à vous‑même et à une créature supplémentaire, ou vous améliorez votre nourriture et votre abri pour vivre de manière confortable.</p>
 <p><strong>Succès</strong> Vous trouvez de la nourriture et un abri simple qui vous protège contre les éléments afin de bénéficier du strict minimum en matière de subsistance.</p>
