--- a/data/actions/QyzlsLrqM0EEwd7j.htm
+++ b/data/actions/QyzlsLrqM0EEwd7j.htm
@@ -1,7 +1,6 @@
 Name: Earn Income
 Nom: Gagner de l'argent
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You can use a skill-typically Crafting, Lore, or Performance-to earn money during downtime. You must be trained in the skill to do so. This takes time to set up, and your income depends on your proficiency rank and how lucrative a task you can find. Because this process requires a significant amount of time and involves tracking things outside the progress of adventures, it won't come up in every campaign.</p>
@@ -237,191 +236,191 @@ Nom: Gagner de l'argent
 <p>Quand vous acceptez un travail, le MJ détermine en secret le DD de votre test de compétence. Après votre premier jour de travail, vous faites un jet pour déterminer vos gains. La somme d’argent que vous gagnez dépend de votre résultat, du niveau de la tâche et de votre rang de maîtrise (comme indiqué sur la table : Argent gagné).</p>
 <p>Vous pouvez continuer à travailler sur la tâche lors des jours suivants sans avoir à faire d’autres jets. Pour chaque jour que vous passez à travailler après le premier, vous gagnez la même somme d’argent que lors du premier jour, et ce, jusqu’à ce que la tâche soit entièrement accomplie. Le MJ détermine la durée du travail pour terminer une tâche.</p>
 <h2>Table : Argent gagné</h2>
-<table style="height: 408px;" border="1">
-<tbody>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px;"><strong>Niveau de la tâche</strong></td>
-<td style="width: 68px; height: 17px;"><strong>Échec</strong></td>
-<td style="width: 46px; height: 17px;"><strong>Qualifié</strong></td>
-<td style="width: 41px; height: 17px;"><strong>Expert</strong></td>
-<td style="width: 43px; height: 17px;"><strong>Maître</strong></td>
-<td style="width: 64px; height: 17px;"><strong>Légendaire</strong></td>
+<table class="pf2-table">
+<thead>
+<tr>
+<th><strong>Niveau de la tâche</strong></th>
+<th><strong>Échec</strong></th>
+<th><strong>Qualifié</strong></th>
+<th><strong>Expert</strong></th>
+<th><strong>Maître</strong></th>
+<th><strong>Légendaire</strong></th>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">0</td>
-<td style="width: 68px; height: 17px; text-align: center;">1 pc</td>
-<td style="width: 46px; height: 17px; text-align: center;">5 pc</td>
-<td style="width: 41px; height: 17px; text-align: center;">5 pc</td>
-<td style="width: 43px; height: 17px; text-align: center;">5 pc</td>
-<td style="width: 64px; height: 17px; text-align: center;">5 pc</td>
+<tr>
+<td>0</td>
+<td>1 pc</td>
+<td>5 pc</td>
+<td>5 pc</td>
+<td>5 pc</td>
+<td>5 pc</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">1</td>
-<td style="width: 68px; height: 17px; text-align: center;">2 pc</td>
-<td style="width: 46px; height: 17px; text-align: center;">2 pa</td>
-<td style="width: 41px; height: 17px; text-align: center;">2 pa</td>
-<td style="width: 43px; height: 17px; text-align: center;">2 pa</td>
-<td style="width: 64px; height: 17px; text-align: center;">2 pa</td>
+<tr>
+<td>1</td>
+<td>2 pc</td>
+<td>2 pa</td>
+<td>2 pa</td>
+<td>2 pa</td>
+<td>2 pa</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">2</td>
-<td style="width: 68px; height: 17px; text-align: center;">4 pc</td>
-<td style="width: 46px; height: 17px; text-align: center;">3 pa</td>
-<td style="width: 41px; height: 17px; text-align: center;">3 pa</td>
-<td style="width: 43px; height: 17px; text-align: center;">3 pa</td>
-<td style="width: 64px; height: 17px; text-align: center;">3 pa</td>
+<tr>
+<td>2</td>
+<td>4 pc</td>
+<td>3 pa</td>
+<td>3 pa</td>
+<td>3 pa</td>
+<td>3 pa</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">3</td>
-<td style="width: 68px; height: 17px; text-align: center;">8 pc</td>
-<td style="width: 46px; height: 17px; text-align: center;">5 pa</td>
-<td style="width: 41px; height: 17px; text-align: center;">5 pa</td>
-<td style="width: 43px; height: 17px; text-align: center;">5 pa</td>
-<td style="width: 64px; height: 17px; text-align: center;">5 pa</td>
+<tr>
+<td>3</td>
+<td>8 pc</td>
+<td>5 pa</td>
+<td>5 pa</td>
+<td>5 pa</td>
+<td>5 pa</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">4</td>
-<td style="width: 68px; height: 17px; text-align: center;">1 pa</td>
-<td style="width: 46px; height: 17px; text-align: center;">7 pa</td>
-<td style="width: 41px; height: 17px; text-align: center;">8 pa</td>
-<td style="width: 43px; height: 17px; text-align: center;">8 pa</td>
-<td style="width: 64px; height: 17px; text-align: center;">8 pa</td>
+<tr>
+<td>4</td>
+<td>1 pa</td>
+<td>7 pa</td>
+<td>8 pa</td>
+<td>8 pa</td>
+<td>8 pa</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">5</td>
-<td style="width: 68px; height: 17px; text-align: center;">2 pa</td>
-<td style="width: 46px; height: 17px; text-align: center;">9 pa</td>
-<td style="width: 41px; height: 17px; text-align: center;">1 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">1 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">1 po</td>
+<tr>
+<td>5</td>
+<td>2 pa</td>
+<td>9 pa</td>
+<td>1 po</td>
+<td>1 po</td>
+<td>1 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">6</td>
-<td style="width: 68px; height: 17px; text-align: center;">3 pa</td>
-<td style="width: 46px; height: 17px; text-align: center;">1 po, 5 pa</td>
-<td style="width: 41px; height: 17px; text-align: center;">2 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">2 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">2 po</td>
+<tr>
+<td>6</td>
+<td>3 pa</td>
+<td>1 po, 5 pa</td>
+<td>2 po</td>
+<td>2 po</td>
+<td>2 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">7</td>
-<td style="width: 68px; height: 17px; text-align: center;">4 pa</td>
-<td style="width: 46px; height: 17px; text-align: center;">2 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">2 po, 5 pa</td>
-<td style="width: 43px; height: 17px; text-align: center;">2 po, 5 pa</td>
-<td style="width: 64px; height: 17px; text-align: center;">2 po, 5 pa</td>
+<tr>
+<td>7</td>
+<td>4 pa</td>
+<td>2 po</td>
+<td>2 po, 5 pa</td>
+<td>2 po, 5 pa</td>
+<td>2 po, 5 pa</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">8</td>
-<td style="width: 68px; height: 17px; text-align: center;">5 pa</td>
-<td style="width: 46px; height: 17px; text-align: center;">2 po, 5 pa</td>
-<td style="width: 41px; height: 17px; text-align: center;">3 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">3 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">3 po</td>
+<tr>
+<td>8</td>
+<td>5 pa</td>
+<td>2 po, 5 pa</td>
+<td>3 po</td>
+<td>3 po</td>
+<td>3 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">9</td>
-<td style="width: 68px; height: 17px; text-align: center;">6 pa</td>
-<td style="width: 46px; height: 17px; text-align: center;">3 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">4 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">4 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">4 po</td>
+<tr>
+<td>9</td>
+<td>6 pa</td>
+<td>3 po</td>
+<td>4 po</td>
+<td>4 po</td>
+<td>4 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">10</td>
-<td style="width: 68px; height: 17px; text-align: center;">7 pa</td>
-<td style="width: 46px; height: 17px; text-align: center;">4 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">5 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">6 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">6 po</td>
+<tr>
+<td>10</td>
+<td>7 pa</td>
+<td>4 po</td>
+<td>5 po</td>
+<td>6 po</td>
+<td>6 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">11</td>
-<td style="width: 68px; height: 17px; text-align: center;">8 pa</td>
-<td style="width: 46px; height: 17px; text-align: center;">5 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">6 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">8 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">8 po</td>
+<tr>
+<td>11</td>
+<td>8 pa</td>
+<td>5 po</td>
+<td>6 po</td>
+<td>8 po</td>
+<td>8 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">12</td>
-<td style="width: 68px; height: 17px; text-align: center;">9 pa</td>
-<td style="width: 46px; height: 17px; text-align: center;">6 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">8 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">10 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">10 po</td>
+<tr>
+<td>12</td>
+<td>9 pa</td>
+<td>6 po</td>
+<td>8 po</td>
+<td>10 po</td>
+<td>10 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">13</td>
-<td style="width: 68px; height: 17px; text-align: center;">1 po</td>
-<td style="width: 46px; height: 17px; text-align: center;">7 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">10 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">15 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">15 po</td>
+<tr>
+<td>13</td>
+<td>1 po</td>
+<td>7 po</td>
+<td>10 po</td>
+<td>15 po</td>
+<td>15 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">14</td>
-<td style="width: 68px; height: 17px; text-align: center;">1 po, 5 pa</td>
-<td style="width: 46px; height: 17px; text-align: center;">8 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">15 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">20 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">20 po</td>
+<tr>
+<td>14</td>
+<td>1 po, 5 pa</td>
+<td>8 po</td>
+<td>15 po</td>
+<td>20 po</td>
+<td>20 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">15</td>
-<td style="width: 68px; height: 17px; text-align: center;">2 po</td>
-<td style="width: 46px; height: 17px; text-align: center;">10 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">20 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">28 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">28 po</td>
+<tr>
+<td>15</td>
+<td>2 po</td>
+<td>10 po</td>
+<td>20 po</td>
+<td>28 po</td>
+<td>28 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">16</td>
-<td style="width: 68px; height: 17px; text-align: center;">2 po, 5 pa</td>
-<td style="width: 46px; height: 17px; text-align: center;">13 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">25 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">36 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">40 po</td>
+<tr>
+<td>16</td>
+<td>2 po, 5 pa</td>
+<td>13 po</td>
+<td>25 po</td>
+<td>36 po</td>
+<td>40 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">17</td>
-<td style="width: 68px; height: 17px; text-align: center;">3 po</td>
-<td style="width: 46px; height: 17px; text-align: center;">15 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">30 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">45 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">55 po</td>
+<tr>
+<td>17</td>
+<td>3 po</td>
+<td>15 po</td>
+<td>30 po</td>
+<td>45 po</td>
+<td>55 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">18</td>
-<td style="width: 68px; height: 17px; text-align: center;">4 po</td>
-<td style="width: 46px; height: 17px; text-align: center;">20 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">45 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">70 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">90 po</td>
+<tr>
+<td>18</td>
+<td>4 po</td>
+<td>20 po</td>
+<td>45 po</td>
+<td>70 po</td>
+<td>90 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">19</td>
-<td style="width: 68px; height: 17px; text-align: center;">6 po</td>
-<td style="width: 46px; height: 17px; text-align: center;">30 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">60 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">100 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">130 po</td>
+<tr>
+<td>19</td>
+<td>6 po</td>
+<td>30 po</td>
+<td>60 po</td>
+<td>100 po</td>
+<td>130 po</td>
 </tr>
-<tr style="height: 17px;">
-<td style="width: 87px; height: 17px; text-align: center;">20</td>
-<td style="width: 68px; height: 17px; text-align: center;">8 po</td>
-<td style="width: 46px; height: 17px; text-align: center;">40 po</td>
-<td style="width: 41px; height: 17px; text-align: center;">75 po</td>
-<td style="width: 43px; height: 17px; text-align: center;">150 po</td>
-<td style="width: 64px; height: 17px; text-align: center;">200 po</td>
+<tr>
+<td>20</td>
+<td>8 po</td>
+<td>40 po</td>
+<td>75 po</td>
+<td>150 po</td>
+<td>200 po</td>
 </tr>
-<tr style="height: 34px;">
-<td style="width: 87px; height: 34px; text-align: center;">20 (critical success)</td>
-<td style="width: 68px; height: 34px;">&nbsp;</td>
-<td style="width: 46px; height: 34px; text-align: center;">50 po</td>
-<td style="width: 41px; height: 34px; text-align: center;">90 po</td>
-<td style="width: 43px; height: 34px; text-align: center;">175 po</td>
-<td style="width: 64px; height: 34px; text-align: center;">300 po</td>
+<tr>
+<td>20 (critical success)</td>
+<td>&nbsp;</td>
+<td>50 po</td>
+<td>90 po</td>
+<td>175 po</td>
+<td>300 po</td>
 </tr>
 </tbody>
 </table>
@@ -441,6 +440,6 @@ Nom: Gagner de l'argent
 <h2 class="title">Fabriquer des produits destinés à la vente - Artisanat</h2>
 <p>En utilisant Artisanat, vous pouvez travailler à la production d’objets ordinaires destinés à la vente. On peut généralement trouver facilement un travail consistant à fabriquer des objets simples dont le niveau est inférieur de 1 ou 2 par rapport à celui de la communauté dans laquelle vous vous trouvez. Les tâches de niveau supérieur représentent des commandes spéciales pour lesquelles vous devez Fabriquer un objet spécifique en effectuant l’activité d’intermède Fabriquer, puis le vendre au bon prix à un client. Ces opportunités ne sont pas nombreuses et peuvent imposer des conditions spéciales ou générer de graves conséquences si vous décevez un client important.</p>
 <h2 class="title">Pratiquer un métier - Connaissance</h2>
-<p>Vous mettez en pratique l’un de vos domaines de Connaissance pendant un intermède pour pratiquer un métier. Les domaines de Connaissance les plus rentables sont le commerce, les lois ou la navigation maritime où la demande de main-d’œuvre est toujours importante. Le MJ peut augmenter le DD ou décider que seules des offres d’emploi de bas niveau sont disponibles si vous voulez utiliser une compétence de Connaissance méconnues pour Gagner de l’argent. Il est également possible que vous ayez besoin d’outils particuliers pour accepter un travail, comme des outils de mineur pour travailler dans une mine ou une balance de marchand pour acheter et vendre des marchandises sur un marché.</p>
+<p>Vous mettez en pratique l’un de vos domaines de Connaissance pendant un intermède pour pratiquer un métier. Les domaines de Connaissance les plus rentables sont le commerce, les lois ou la navigation maritime où la demande de main-d’œuvre est toujours importante. Le MJ peut augmenter le DD ou décider que seules des offres d’emploi de bas niveau sont disponibles si vous voulez utiliser une compétence de Connaissance méconnue pour Gagner de l’argent. Il est également possible que vous ayez besoin d’outils particuliers pour accepter un travail, comme des outils de mineur pour travailler dans une mine ou une balance de marchand pour acheter et vendre des marchandises sur un marché.</p>
 <h2 class="title">Donner une représentation - Représentation</h2>
 <p>Vous donnez une représentation devant un public pour gagner de l’argent. Les spectateurs disponibles déterminent le niveau de votre tâche, étant donné que des spectateurs plus avertis sont plus difficiles à impressionner mais permettent également de gagner plus d’argent. Le MJ détermine le niveau de la tâche en fonction de la disponibilité des spectateurs. Jouer un spectacle de rue devant un public de roturiers est une tâche de niveau 0, mais un spectacle devant un public d’artisans plus exigeants peut être une tâche de niveau 2 ou 3. Les représentations devant des marchands, des nobles et des membres de la famille royale sont des tâches de niveau plus élevé encore. Votre degré de succès détermine si les spectateurs sont touchés et s’ils vous applaudissent ou vous jettent des fruits pourris.</p>
