--- a/data/actions/Rlp7ND33yYfxiEWi.htm
+++ b/data/actions/Rlp7ND33yYfxiEWi.htm
@@ -1,7 +1,6 @@
 Name: Master Strike
 Nom: Frappe de maître
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> Your Strike hits a @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed} creature and deals damage</p>
@@ -20,4 +19,4 @@ Nom: Frappe de maître
 <p><strong>Succès critique</strong> La cible n'est pas affectée.</p>
 <p><strong>Succès</strong> La cible est @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaiblie} 2 jusqu'à la fin de votre prochain tour.</p>
 <p><strong>Échec</strong> La cible est @Compendium[pf2e.conditionitems.6uEgoh53GbXuHpTF]{Paralysée} pendant 4 rounds.</p>
-<p><strong>Échec critique</strong> La cible est Paralysée pendant 4 rounds, se trouve dans l'état @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{inconscient} pendant 2 heures ou est tuée (à vous de décider).</p>
+<p><strong>Échec critique</strong> La cible est Paralysée pendant 4 rounds, se trouve dans l'état @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{Inconscient} pendant 2 heures ou est tuée (à vous de décider).</p>
