--- a/data/actions/tuZnRWHixLArvaIf.htm
+++ b/data/actions/tuZnRWHixLArvaIf.htm
@@ -1,7 +1,6 @@
 Name: Glimpse of Redemption
 Nom: Lueur de rédemption
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An enemy damages your ally, and both are within 15 feet of you</p>
