--- a/data/actions/1kGNdIIhuglAjIp9.htm
+++ b/data/actions/1kGNdIIhuglAjIp9.htm
@@ -1,7 +1,6 @@
 Name: Treat Wounds
 Nom: Soigner les blessures
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You're wearing or holding @Compendium[pf2e.equipment-srd.s1vB3HdXjMigYAnY]{Healer's Tools}</p>
