--- a/data/actions/Q5iIYCFdqJFM31GW.htm
+++ b/data/actions/Q5iIYCFdqJFM31GW.htm
@@ -1,7 +1,6 @@
 Name: Learn a Spell
 Nom: Apprendre un sort
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You have a spellcasting class feature, and the spell you want to learn is on your magical tradition's spell list.</p>
@@ -25,7 +24,7 @@ Nom: Apprendre un sort
 <p>Pour apprendre le sort, vous devez faire ce qui suit :</p>
 <ul>
 <li>Passer une heure par niveau du sort en conversation avec une personne qui connaît le sort ou en possession du manuscrit magique sur lequel il est inscrit.</li>
-<li>Posséder les matériaux dont le prix est indiqué dans le tableau.</li>
+<li>Posséder les matériaux dont le prix est indiqué dans le tableau ci-après.</li>
 <li>Effectuer un test de la compétence correspondant à votre tradition (le DD est déterminé par le MJ, celui‑ci étant souvent proche du DD indiqué dans le tableau). Le DD des sorts peu courants ou rares sont plus élevés.</li>
 </ul>
 <p>Si vous avez un grimoire, Apprendre un sort vous permet d’ajouter le sort dans votre grimoire ; si vous préparez les sorts issus d’une liste, le sort appris est ajouté à votre liste ; si vous avez un répertoire de sorts, vous pouvez le sélectionner quand vous ajoutez ou remplacez des sorts.</p>
