--- a/data/actions/W4M8L9WepGLamlHs.htm
+++ b/data/actions/W4M8L9WepGLamlHs.htm
@@ -1,7 +1,6 @@
 Name: Threatening Approach
 Nom: Approche menaçante
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You Stride to be adjacent to a foe and @Compendium[pf2e.actionspf2e.2u915NdUyQan6uKF]{Demoralize} that foe. If you succeed, the foe is @Compendium[pf2e.conditionitems.TBSHQspnbcqxsmjL]{Frightened 2} instead of frightened 1.</p>
