--- a/data/actions/aBQ8ajvEBByv45yz.htm
+++ b/data/actions/aBQ8ajvEBByv45yz.htm
@@ -1,7 +1,6 @@
 Name: Cast a Spell
 Nom: Lancer un sort
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You cast a spell you have prepared or in your repertoire. Casting a Spell is a special activity that takes a variable number of actions depending on the spell, as listed in each spell's stat block. As soon as the spellcasting actions are complete, the spell effect occurs.<br /><br />Some spells are cast as a reaction or free action. In those cases, you Cast the Spell as a reaction or free action (as appropriate) instead of as an activity. Such cases will be noted in the spell's stat block-for example, "[reaction] verbal."<br /><br /><strong>Long Casting</strong> Times Some spells take minutes or hours to cast. The Cast a Spell activity for these spells includes a mix of the listed spell components, but it's not necessary to break down which one you're providing at a given time. You can't use other actions or reactions while casting such a spell, though at the GM's discretion, you might be able to speak a few sentences. As with other activities that take a long time, these spells have the exploration trait, and you can't cast them in an encounter. If combat breaks out while you're casting one, your spell is disrupted.<br /><br /><strong>Spell Components</strong> Each spell lists the spell components required to cast it after the action icons or text, such as "[three-actions] material, somatic, verbal." The spell components, described in detail below, add traits and requirements to the Cast a Spell activity. If you can't provide the components, you fail to Cast the Spell.</p>
@@ -23,4 +22,4 @@ Nom: Lancer un sort
 <li>Verbal (concentration)</li>
 <li>Focaliseur (manipulation)</li>
 </ul>
-<p><strong>Sorts interrompus et perdus</strong> Certains sorts et pouvoirs permettent d’interrompre un sort, qui est alors perdu et n’a aucun effet. Quand vous perdez un sort, vous avez déjà dépensé son emplacement de sort, son coût et ses actions et déjà utilisé l’activité Lancer un sort. Si un sort est interrompu lors de l’action @Compendium[pf2e.actionspf2e.3f5DMFu8fPiqHpRg]{Maintenir un sort}, alors ce sort se termine de suite. Vous pouvez consulter les règles complètes concernant les actions d’interruption.</p>
+<p><strong>Sorts interrompus et perdus</strong> Certains sorts et pouvoirs permettent d’interrompre un sort, qui est alors perdu et n’a aucun effet. Quand vous perdez un sort, vous avez déjà dépensé son emplacement de sort, son coût et ses actions et déjà utilisé l’activité Lancer un sort. Si un sort est interrompu lors de l’action @Compendium[pf2e.actionspf2e.3f5DMFu8fPiqHpRg]{Maintenir un sort}, alors ce sort se termine de suite.</p>
