--- a/data/actions/b6CanpXyUKJgxEwq.htm
+++ b/data/actions/b6CanpXyUKJgxEwq.htm
@@ -1,7 +1,6 @@
 Name: Salt Wound
 Nom: Saler les blessures
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day;</p>
@@ -10,6 +9,6 @@ Nom: Saler les blessures
 <p><strong>Effect</strong> You channel salt and brine from your blood into the creature’s wounds. The creature must attempt a Fortitude save using your class DC or spell DC, whichever is higher. On a failure, the creature takes [[/r 1d6 #persistent acid]] persistent acid damage and is @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Sickened 1} by the pain. On a critical failure, it instead takes [[/r 2d6 #persistent acid]] persistent acid damage and is @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Sickened 2}.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par jour</p>
-<p><strong>Déclencheur</strong> Une créature qui possède du sang est n'est pas à son maximum de Points de vie vous touchez avec une Frappe au corps à corps.</p>
+<p><strong>Déclencheur</strong> Une créature qui possède du sang et n'est pas à son maximum de Points de vie vous touche avec une Frappe au corps à corps.</p>
 <hr />
-<p><strong>Effet</strong> Vous canalisez du sel et de la saumure provenant de votre sang pour les verser sur les blessures de la créature. La créature doit tenter un jet de Vigueur en utilisant le plus élevé entre votre DD de classe et votre DD de sort. En cas d'échec, la créature subit [[/r 1d6 #acide persistant]] dégâts d'acide persistants et est @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1 par la douleur. En cas d'échec critique, il subit à la place [[/r 2d6 #acide persistant]] dégâts d'acide persistant est est Malade 2.</p>
+<p><strong>Effet</strong> Vous canalisez du sel et de la saumure provenant de votre sang pour les verser sur les blessures de la créature. La créature doit tenter un jet de Vigueur en utilisant le plus élevé entre votre DD de classe et votre DD de sort. En cas d'échec, la créature subit [[/r 1d6 #acide persistant]] dégâts d'acide persistants et est rendue @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1 par la douleur. En cas d'échec critique, elle subit à la place [[/r 2d6 #acide persistant]] dégâts d'acide persistant est est Malade 2.</p>
