--- a/data/actions/hFRHPBj6wjAayNtW.htm
+++ b/data/actions/hFRHPBj6wjAayNtW.htm
@@ -1,7 +1,6 @@
 Name: Jinx
 Nom: Maudire
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -14,8 +13,8 @@ Nom: Maudire
 ------ Description (fr) ------
 <p><strong>Fréquence </strong>une fois par jour</p>
 <hr />
-<p>Vous pouvez maudire une autre créature la rendant maladroite. Cette malédiction possède une portée de 9 m et vous devez être capable de voir votre cible. La cible obtient un jet de sauvegarde pour résister à cette malédiction, en utilisant le plus élevé entre votre DD de classe ou de sort.</p>
+<p>Vous pouvez maudire une autre créature pour la rendre maladroite. Cette malédiction possède une portée de 9 m et vous devez être capable de voir votre cible. La cible obtient un jet de sauvegarde pour résister à cette malédiction, en utilisant le plus élevé entre votre DD de classe ou votre DD de sort.</p>
 <hr />
-<p><strong>Succès</strong> la cible n'est pas affectée est est immunisée de manière temporaire pendant 24 h.</p>
+<p><strong>Succès</strong> la cible n'est pas affectée est est immunisée de manière temporaire pendant 24 heures.</p>
 <p><strong>Échec</strong> la cible est @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroite} 1 pendant 1 minute.</p>
 <p><strong>Échec critique</strong> La cible est Maladroite 2 pendant 1 minute.</p>
