--- a/data/actions/tHCqgwjtQtzNqVvd.htm
+++ b/data/actions/tHCqgwjtQtzNqVvd.htm
@@ -1,7 +1,6 @@
 Name: Coerce
 Nom: Contraindre
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>With threats either veiled or overt, you attempt to bully a creature into doing what you want. You must spend at least 1 minute of conversation with a creature you can see and that can either see or sense you. At the end of the conversation, attempt an <span data-pf2-action="coerce">Intimidation</span> check against the target's Will DC, modified by any circumstances the GM determines.</p>
@@ -13,7 +12,7 @@ Nom: Contraindre
 ------ Description (fr) ------
 <p>À l’aide de menaces voilées ou manifestes, vous tentez d’intimider une créature pour la forcer à obéir à vos ordres. Vous devez interagir pendant au moins une minute avec une créature qui peut vous voir ou vous sentir et que vous‑même pouvez voir. À la fin de l’interaction, faites un test d’<span data-pf2-action="coerce">Intimidation</span> contre le DD de Volonté de la cible, modifié par les éventuelles circonstances que le MJ juge appropriées.</p>
 <hr />
-<p><strong>Succès critique</strong>  La cible vous révèle l’information que vous cherchez ou accepte de suivre vos directives tant qu’elles ne la mettent pas en danger d’une façon ou d’une autre. Elle continue d’obtempérer pendant une durée déterminée par le MJ, mais sans dépasser une journée. Une fois cette période écoulée, elle devient inamicale (si elle n’était pas déjà inamicale ou hostile). Quoi qu’il en soit, vous lui faites si peur qu’elle ne se rebiffe pas, du moins pas à court terme.</p>
+<p><strong>Succès critique</strong> La cible vous révèle l’information que vous cherchez ou accepte de suivre vos directives tant qu’elles ne la mettent pas en danger d’une façon ou d’une autre. Elle continue d’obtempérer pendant une durée déterminée par le MJ, mais sans dépasser une journée. Une fois cette période écoulée, elle devient inamicale (si elle n’était pas déjà inamicale ou hostile). Quoi qu’il en soit, vous lui faites si peur qu’elle ne se rebiffe pas, du moins pas à court terme.</p>
 <p><strong>Succès</strong> Comme un succès critique, mais une fois la cible inamicale, elle peut décider d’agir contre vous en vous dénonçant aux autorités ou en aidant vos ennemis, par exemple.</p>
 <p><strong>Échec</strong> La cible ne fait pas ce que vous voulez qu’elle fasse et si elle n’était pas déjà inamicale ou hostile, elle devient inamicale.</p>
 <p><strong>Échec critique</strong> La cible refuse d’obtempérer, devient hostile si elle ne l’était pas déjà et vous ne pouvez plus la Contraindre pendant au moins une semaine.</p>
