relectures des héritages

--- a/data/ancestryfeatures/feat-01-ITgkqfnAOJCbcIys.htm
+++ b/data/ancestryfeatures/feat-01-ITgkqfnAOJCbcIys.htm
@@ -1,7 +1,6 @@
 Name: Oread
 Nom: Oréade
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>An earth elemental ancestor has influenced your bloodline, and your features highlight this elemental planar connection. You might have a crystalline or metallic sheen to your skin or hair, rough and stony flesh, or glittering gemstone eyes. You gain the oread trait, in addition to the traits from your ancestry. You also gain @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Low-Light Vision}, or you gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision} if your ancestry already has low-light vision. You can choose from oread feats and feats from your ancestry whenever you gain an ancestry feat.</p>
