--- a/data/ancestryfeatures/feat-01-RxNBBMFZwPA3Vlg3.htm
+++ b/data/ancestryfeatures/feat-01-RxNBBMFZwPA3Vlg3.htm
@@ -1,7 +1,6 @@
 Name: Shoreline Strix
 Nom: Strix des falaises
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You’re the descendant of strix who traveled to the coasts. Your feathers are especially water-repellent and sleekly angled for diving, allowing you to catch fish and other prey in the shallows. You are trained in Athletics, and you gain the @Compendium[pf2e.feats-srd.iOY6YfGBaOvMNAor]{Underwater Marauder} skill feat as a bonus skill feat.</p>
