--- a/data/ancestryfeatures/feat-01-RKz7Z5pefXKiv9JE.htm
+++ b/data/ancestryfeatures/feat-01-RKz7Z5pefXKiv9JE.htm
@@ -1,7 +1,6 @@
 Name: Suli
 Nom: Suli
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You are descended from a janni or otherwise embody a dichotomy of opposing elemental planar forces. You gain the suli trait, in addition to the traits from your ancestry. You also gain @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Low-Light Vision}, or you gain @Compendium[pf2e.ancestryfeatures.HHVQDp61ehcpdiU8]{Darkvision} if your ancestry already has low-light vision. You can choose from suli feats and feats from your ancestry whenever you gain an ancestry feat.</p>
