--- a/data/ancestryfeatures/feat-01-TQFE10VFvh9wb8zb.htm
+++ b/data/ancestryfeatures/feat-01-TQFE10VFvh9wb8zb.htm
@@ -1,7 +1,6 @@
 Name: Woodstalker Lizardfolk
 Nom: Homme-lézard Arpenteur sylvestre
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>You move easily through thick forest and jungle, using every branch or bush. You can always use the Take Cover action when in forest or jungle terrain to gain cover, even if you’re not next to an obstacle you would normally be able to Take Cover behind. You gain the @Compendium[pf2e.feats-srd.beyw5bdA5hkQbmaG]{Terrain Stalker} feat, even if you’re not trained in Stealth, and you must choose underbrush as your chosen terrain.</p>
