--- a/data/ancestryfeatures/feat-01-tLd8Qg82AwEbbmgX.htm
+++ b/data/ancestryfeatures/feat-01-tLd8Qg82AwEbbmgX.htm
@@ -1,7 +1,6 @@
 Name: Half-Orc
 Nom: Demi-orc
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>One of your parents was an orc, or one or both were half-orcs. You have a green tinge to your skin and other indicators of orc heritage. You gain the orc trait, the half-orc trait, and @Compendium[pf2e.ancestryfeatures.DRtaqOHXTRtGRIUT]{Low-Light Vision}. In addition, you can select orc, half-orc, and human feats whenever you gain an ancestry feat.</p>
