--- a/data/familiar-abilities/04-LUBS9csNNgRTui4p.htm
+++ b/data/familiar-abilities/04-LUBS9csNNgRTui4p.htm
@@ -7,4 +7,4 @@ Nom: Vrilles agrippantes
 <p>Your familiar can extend vines or similar tendrils, increasing its reach to 15 feet.</p>
 ------ Description (fr) ------
 <p>Prérequis @Compendium[pf2e.feats-srd.baz18CdB13DVMHV9]{Secrets du familier léchi}</p>
-<p>Votre familier peut faire pousser des lianes ou des vrilles similaires, augmentant sa portée à 4,5 m.</p>
+<p>Votre familier peut faire pousser des lianes ou des vrilles similaires, augmentant son allonge à 4,5 m.</p>
