--- a/data/feats/class-04-baz18CdB13DVMHV9.htm
+++ b/data/feats/class-04-baz18CdB13DVMHV9.htm
@@ -2,8 +2,7 @@ Name: Leshy Familiar Secrets
 Nom: Secrets du familier léchi
 PrereqEN: leaf order
 PrereqFR: ordre de la feuille
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p>The leaf order's secrets allow your familiar to take advantage of its leshy form. You can select one additional familiar ability each day, which must be one of the following leshy familiar abilities. You can't select more than one leshy familiar ability at a time.</p>
@@ -15,7 +14,7 @@ PrereqFR: ordre de la feuille
 ------ Description (fr) ------
 <p>Les secrets de l'ordre de la feuille permettent à votre familier de tirer parti de sa forme de léchi. Vous pouvez choisir une capacité de familier supplémentaire chaque jour , qui doit être une des capacités de familier léchi suivantes. Vous ne pouvez choisir plus d'une capacité de familier léchi en même temps.</p>
 <ul>
-<li><strong>Vrilles agrippantes</strong> Votre familier peut faire pousser des lianes ou des vrilles similaires, augmentant sa portée à 4,5 m.</li>
-<li><strong>Purificateur d'Air</strong> Votre familier recycle l'air, fournissant assez d'oxygène à une créature de taille Moyenne dans les zones avec de l'air vicié, tel qu'une chambre scellée ou un espace extradimensionnel. Si le léchi est dans la zone d'un effet de poison inhalé ou d'un effet qui compte sur l'odorat, les créatures dans une émanation de 4,5 m du léchi obtiennent un bonus de circonstances de +2 à leur jet de sauvegarde contre l'effet.</li>
-<li><strong>Explosion verdoyante</strong> Lorsque votre familier meurt, il relâche son énergie primordiale pour lancer la version de @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Guérison} à trois actions, intensifié à un niveau de 1 inférieur à votre plus haut emplacement de sort. Le sort <em>Guérison</em> obtient aussi un bonus de statut égal à deux fois le niveau de sort au nombre de Points de vie qu'il redonne aux plantes. Vous devez être capable de lancer les sorts de niveau 2 en utilisant des emplacements de sort pour choisir cette aptitude de familier.</li>
+<li><strong>@Compendium[pf2e.familiar-abilities.SKIS1xexaOvrecdV]{Explosion verdoyante}</strong> Lorsque votre familier meurt, il relâche son énergie primordiale pour lancer la version de @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Guérison} à trois actions, intensifié à un niveau de 1 inférieur à votre plus haut emplacement de sort. Le sort <em>Guérison</em> obtient aussi un bonus de statut égal à deux fois le niveau de sort au nombre de Points de vie qu'il redonne aux plantes. Vous devez être capable de lancer les sorts de niveau 2 en utilisant des emplacements de sort pour choisir cette aptitude de familier.</li>
+<li><strong>@Compendium[pf2e.familiar-abilities.43xB5UnexISlfRa5]{Purificateur d'Air}</strong> Votre familier recycle l'air, fournissant assez d'oxygène à une créature de taille Moyenne dans les zones avec de l'air vicié, tel qu'une chambre scellée ou un espace extradimensionnel. Si le léchi est dans la zone d'un effet de poison inhalé ou d'un effet qui compte sur l'odorat, les créatures dans une émanation de 4,5 m du léchi obtiennent un bonus de circonstances de +2 à leur jet de sauvegarde contre l'effet.</li>
+<li><strong>@Compendium[pf2e.familiar-abilities.LUBS9csNNgRTui4p]{Vrilles agrippantes}</strong> Votre familier peut faire pousser des lianes ou des vrilles similaires, augmentant son allonge à 4,5 m.</li>
 </ul>
