--- a/data/feats/class-10-h5DzKmKDADGhvmF9.htm
+++ b/data/feats/class-10-h5DzKmKDADGhvmF9.htm
@@ -1,9 +1,8 @@
 Name: Certain Strike
-Nom: Frappe Certaine
+Nom: Frappe certaine
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>Even when you don't hit squarely, you can still score a glancing blow. Make a melee Strike. It gains the following failure effect.</p>
@@ -11,4 +10,4 @@ PrereqFR:
 <p><strong>Failure</strong> Your attack deals any damage it would have dealt on a hit, excluding all damage dice. (This removes damage dice from weapon runes, spells, and special abilities, in addition to weapon damage dice.)</p>
 ------ Description (fr) ------
 <p>Lorsque vous ne touchez pas franchement votre cible, vous parvenez quand même à infliger des dégâts superficiels. Effectuez une Frappe au corps à corps. Elle obtient l’effet d’échec suivant.</p>
-<p><stong>Échec</stong>Votre attaque inflige les dégâts qu’elle devrait normalement in‑ fliger en cas de succès, en enlevant tous les dés de dégâts (vous re‑ tirez ainsi les dés de dégâts conférés par les runes d’arme, les sorts, les pouvoirs spéciaux, en plus des dés de dégâts d’arme).</p>
+<p><stong>Échec</stong> Votre attaque inflige les dégâts qu’elle devrait normalement infliger en cas de succès, en enlevant tous les dés de dégâts (vous retirez ainsi les dés de dégâts conférés par les runes d’arme, les sorts, les pouvoirs spéciaux, en plus des dés de dégâts d’arme).</p>
