Traduction de quelques armes

--- a/data/equipment/weapon-14-7aLpTxRVmoNQTqvJ.htm
+++ b/data/equipment/weapon-14-7aLpTxRVmoNQTqvJ.htm
@@ -1,5 +1,5 @@
 Name: Staff of Conjuration (Major)
-Nom: 
+Nom: Bâton d'invocation majeur
 État: auto-trad
 
 ------ Description (en) ------
@@ -22,21 +22,21 @@ Nom:
 <li>+2 circumstance bonus to checks to identify conjuration magic</li>
 </ul>
 ------ Description (fr) ------
-<p>Ce bâton de frêne est décoré d'animaux ; en le maniant, vous gagnez un bonus de circonstances de +2 aux tests d'identification de la magie de conjuration.</p>
-<p><strong>Activate</strong> Cast a Spell</p>
-<p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</p>
+<p> Ce bâton de frêne est orné de motifs d'animaux; lorsque vous le manipulez, vous gagnez un bonus de circonstances de +2 aux tests pour identifier la magie d'invocation. </p>
+<p> <strong> Activation </strong> Lancer un sort </p>
+<p> <strong> Effet </strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste. </p>
 <ul>
-<li><strong>Cantrip</strong> @Compendium[pf2e.spells-srd.uZK2BYzPnxUBnDjr]{Tanglefoot}</li>
-<li><strong>1st</strong> @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Summon Construct}, @Compendium[pf2e.spells-srd.xqmHD8JIjak15lRk]{Unseen Servant}</li>
-<li><strong>2ème</strong> @Compendium[pf2e.spells-srd.9 XHmC2JgTUIQ1CCm]{Brouillard Obscurcissant}, @Compendium[pf2e.spells-srd.WPKJOhEihhcIm2uQ]{Duvet Fantôme}, @Compendium[pf2e. sorts-srd.lKcsmeOrgHtK4xQa]{Construction d'invocation}, @Compendium[pf2e.sorts-srd.lpT6LotUaQPfinjj]{Elémentaire d'invocation}</li>
-<li><strong>3ème</strong> @Compendium[pf2e.spells-srd.GKpEcy9WId6NJvtx]{Nuageux puant}, @Compendium[pf2e. sorts-srd.lKcsmeOrgHtK4xQa]{Construction d'appel}, @Compendium[pf2e.sorts-srd.lpT6LotUaQPfinjj]{Elémentaire d'appel}</li>
-<li><strong>4ème</strong> , @Compendium[pf2e.spells-srd.TUj8eugNqAvB1vVR]{Création}, @Compendium[pf2e.spells-srd. WPKJOhEihhcIm2uQ]{Duvet fantôme}, @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Construction d'invocation}, @Compendium[pf2e.spells-srd.lpT6LotUaQPfinjj]{Elémentaire d'invocation}</li>
-<li><strong>5e</strong> @Compendium[pf2e.spells-srd.2 w4OpAGihn1JSHFD]{Tentacules noires}, @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Summon Construct}, @Compendium[pf2e.spells-srd.lpT6LotUaQPfinj]{Summon Élémentaire}</li>
-<li><strong>6ème</strong> @Compendium[pf2e.spells-srd.WPKJOhEihhcIm2uQ]{Duvet fantôme}, @Compendium[pf2e. sorts-srd.lKcsmeOrgHtK4xQa]{Construction d'invocation}, @Compendium[pf2e.sorts-srd.lpT6LotUaQPfinjj]{Elémentaire d'invocation}</li>
+<li> <strong>Tour de magie </strong> @Compendium[pf2e.spells-srd.uZK2BYzPnxUBnDjr]{Entrave} </li>
+<li> <strong>Niveau 1</strong> @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Convocation de créature artificielle}, @Compendium[pf2e.spells-srd.xqmHD8JIjak15lRk]{Serviteur invisible} </li>
+<li> <strong>Niveau 2</strong> @Compendium[pf2e.spells-srd.9XHmC2JgTUIQ1CCm]{Brume de dissimulation}, @Compendium[pf2e.spells-srd.WPKJOhEihhcIm2uQ]{Coursier fantôme}, @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Convocation de créature artificielle}, @Compendium[pf2e.spells-srd.lpT6LotUaQPfinjj]{Convocation d'élémentaire} </li>
+<li><strong>Niveau 3</strong> @Compendium[pf2e.spells-srd.GKpEcy9WId6NJvtx]{Nuage nauséabond}, @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Convocation de créature artificielle}, @Compendium[pf2e.spells-srd.lpT6LotUaQPfinjj]{Convocation d'élémentaire}</li>
+<li><strong>Niveau 4</strong> @Compendium[pf2e.spells-srd.TUj8eugNqAvB1vVR]{Création}, @Compendium[pf2e.spells-srd.WPKJOhEihhcIm2uQ]{Coursier fantôme}, @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Convocation de créature artificielle}, @Compendium[pf2e.spells-srd.lpT6LotUaQPfinjj]{Convocation d'élémentaire}</li>
+<li><strong>Niveau 5</strong> @Compendium[pf2e.spells-srd.2w4OpAGihn1JSHFD]{Tentacules noirs}, @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Convocation de créature artificielle}, @Compendium[pf2e.spells-srd.lpT6LotUaQPfinjj]{Convocation d'élémentaire}</li>
+<li><strong>Niveau 6</strong> @Compendium[pf2e.spells-srd.WPKJOhEihhcIm2uQ]{Coursier fantôme}, @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Convocation de créature artificielle}, @Compendium[pf2e.spells-srd.lpT6LotUaQPfinjj]{Convocation d'élémentaire}</li>
 </ul>
-<p><strong>Exigences d'artisanat</strong> Fournissez une incantation de tous les niveaux énumérés de tous les sorts énumérés.</p>
-<hr />
-<p>Effets appliqués automatiquement:</p>
+<p> <strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
+<h />
+<p> Effets appliqués automatiquement: </p>
 <ul>
-<li>Bonus de circonstances de +2 aux tests d'identification de la magie de conjuration</li>
+<li>bonus de circonstances de +2 aux tests pour identifier la magie d'invocation</li>
 </ul>
