--- a/data/equipment/weapon-06-6IJZamE4JkERQumf.htm
+++ b/data/equipment/weapon-06-6IJZamE4JkERQumf.htm
@@ -1,5 +1,5 @@
 Name: Staff of Conjuration
-Nom: Bâton de conjuration
+Nom: Bâton d'invocation
 État: officielle
 
 ------ Description (en) ------
@@ -23,8 +23,8 @@ Nom: Bâton de conjuration
 <p> <strong> Effet </strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste. </p>
 <ul>
 <li> <strong> Tour de magie </strong> @Compendium[pf2e.spells-srd.uZK2BYzPnxUBnDjr]{entrave} </li>
-<li> <strong> 1st </strong> @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Convocation de créature artificielle}, @Compendium[pf2e.spells-srd.xqmHD8JIjak15lRk]{Serviteur invisible} </li>
-<li> <strong> 2e </strong> @Compendium[pf2e.spells-srd.9XHmC2JgTUIQ1CCm]{Brume de dissimulation}, @Compendium[pf2e.spells-srd.WPKJOhEihhcIm2uQ]{Coursier fantôme}, @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Convocation de créature artificielle}, @Compendium[pf2e.spells-srd.lpT6LotUaQPfinjj]{Convocation d'élémentaire} </li>
+<li> <strong> Niveau 1 </strong> @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Convocation de créature artificielle}, @Compendium[pf2e.spells-srd.xqmHD8JIjak15lRk]{Serviteur invisible} </li>
+<li> <strong> Niveau 2 </strong> @Compendium[pf2e.spells-srd.9XHmC2JgTUIQ1CCm]{Brume de dissimulation}, @Compendium[pf2e.spells-srd.WPKJOhEihhcIm2uQ]{Coursier fantôme}, @Compendium[pf2e.spells-srd.lKcsmeOrgHtK4xQa]{Convocation de créature artificielle}, @Compendium[pf2e.spells-srd.lpT6LotUaQPfinjj]{Convocation d'élémentaire} </li>
 </ul>
 <p> <strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
 <h />
