--- a/data/equipment/weapon-08-8No84rsBOCVCkXJK.htm
+++ b/data/equipment/weapon-08-8No84rsBOCVCkXJK.htm
@@ -1,6 +1,6 @@
 Name: Staff of Illumination
-Nom: 
-État: auto-trad
+Nom: Bâton d'illumination
+État: officielle
 
 ------ Description (en) ------
 <p><span>This simple iron staff is capped with a faceted, clear gem.<br /></span></p>
@@ -13,12 +13,12 @@ Nom:
 </ul>
 <p><br /><strong>Craft Requirements</strong> Supply one casting of all listed levels of all listed spells.</p>
 ------ Description (fr) ------
-<p><span>Ce simple bâton de fer est coiffé d'une pierre précieuse transparente à facettes.<br /></span></p>
-<p><span><strong>Activate</strong> Interact ; <strong>Effect</strong> La gemme au sommet du bâton brille comme une torche, diffusant une lumière vive dans un rayon de 20 pieds (et une lumière faible dans les 20 pieds suivants) pendant 10 minutes.<br /></span></p>
-<p><span><strong>Activate</strong> Cast a Spell ; <strong>Effect</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</span></p>
+<p><span>Une pierre précieuse à facettes transparente orne l'extrémité de ce bâton de fer simple.<br /></span></p>
+<p><span><strong>Activation</strong> Interagir ; <strong>Effet</strong> La pierre précieuse au sommet du bâton luit comme une torche, en diffusant une lumière vive dans un rayon de 6 mètres (et une lumière faible 6 mètres au-delà) pendant 10 minutes.<br /></span></p>
+<p><span><strong>Activation</strong> Lancer un sort ; <strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste.</span></p>
 <ul>
-<li><strong>Cantrip</strong> @Compendium[pf2e.spells-srd.WBmvzNDfpwka3qT4]{Light}</li>
-<li><strong>2ème</strong> @Compendium[pf2e.spells-srd.ynm8JIU3sc3qUMpa]{Flamme Continue}</li>
-<li><strong>3e</strong> <em>@Compendium[pf2e.spells-srd.ynm8JIU3sc3qUMpa]{Flamme continue}</em>, @Compendium[pf2e.spells-srd.DyiD239dNS7RIxZE]{Lumière larmoyante}</li>
+<li><strong>Tour de magie</strong> @Compendium[pf2e.spells-srd.WBmvzNDfpwka3qT4]{Lumière}</li>
+<li><strong>Niveau 2</strong> @Compendium[pf2e.spells-srd.ynm8JIU3sc3qUMpa]{Flamme éternelle}</li>
+<li><strong>Niveau 3</strong> <em>@Compendium[pf2e.spells-srd.ynm8JIU3sc3qUMpa]{Flamme éternelle}</em>, @Compendium[pf2e.spells-srd.DyiD239dNS7RIxZE]{Lumière brûlante}</li>
 </ul>
-<p><br /><strong>Conditions d'artisanat</strong> Fournissez une incantation de tous les niveaux énumérés de tous les sorts énumérés.</p>
+<p><br /><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste à tous les niveaux indiqués.</p>
