--- a/data/equipment/weapon-14-gca5Pgt9Pg8G23VA.htm
+++ b/data/equipment/weapon-14-gca5Pgt9Pg8G23VA.htm
@@ -1,6 +1,6 @@
 Name: Staff of Nature's Vengeance (Greater)
-Nom: 
-État: auto-trad
+Nom: Bâton de vengeance de la nature supérieur
+État: libre
 
 ------ Description (en) ------
 <p>This stout staff is made from gnarled hawthorn. When used as a weapon, a staff of nature's vengeance permanently has the effects of @Compendium[pf2e.spells-srd.s3abwDbTV43pGFFW]{Shillelagh}</p>
@@ -17,16 +17,16 @@ Nom:
 <li><strong>6th</strong> @Compendium[pf2e.spells-srd.ayRXv0wQH00TTNZe]{Purple Worm Sting}, @Compendium[pf2e.spells-srd.JbAcSLu62TU1OgNF]{Tangling Creepers}</li>
 </ul>
 ------ Description (fr) ------
-<p>Ce solide bâton est fabriqué à partir d'aubépine noueuse. Lorsqu'il est utilisé comme arme, le bâton de la vengeance de la nature'a en permanence les effets de @Compendium[pf2e.spells-srd.s3abwDbTV43pGFFW]{Shillelagh}</p>
-<p><strong>Activate</strong> lance un sort;</p>
+<p>Ce solide bâton est fabriqué à partir d'aubépine noueuse. Lorsqu'il est utilisé comme arme, le bâton de la vengeance de la nature a en permanence les effets de @Compendium[pf2e.spells-srd.s3abwDbTV43pGFFW]{Shillelagh}</p>
+<p><strong>Activation</strong> Lancer un sort;</p>
 <p><strong>Effet</strong> Vous dépensez un certain nombre de charges du bâton pour lancer un sort de sa liste;</p>
-<p><strong>Craft Requirements</strong> Fournissez une incantation de tous les niveaux listés de tous les sorts listés.</p>
+<p><strong>Conditions de fabrication</strong> Fournir une incantation de tous les sorts de la liste et à tous les niveaux énumérés.</p>
 <ul>
-<li><strong>Cantrip</strong> @Compendium[pf2e.spells-srd.uZK2BYzPnxUBnDjr]{Tanglefoot}</li>
-<li><strong>1er</strong> @Compendium[pf2e.spells-srd.r3NeUnsgt9mS03Sn]{Saisie choquante}, @Compendium[pf2e.spells-srd.DYdvMZ8G2LiSLVWw]{Dard d'araignée}</li>
-<li><strong>2e</strong> @Compendium[pf2e.spells-srd.2ZdHjnpEQJuqOYSG]{Sphère de feu}, @Compendium[pf2e.spells-srd.cB17yFc9456Pyfec]{Essaim de vomissures}</li>
-<li><strong>3ème</strong> @Compendium[pf2e.spells-srd.gPvtmKMRpg9I9D7H]{Lien externe}, @Compendium[pf2e.spells-srd.KsWhliKfUs3IpW3c]{Mur d'épines}</li>
-<li><strong>4ème</strong> @Compendium[pf2e.spells-srd.VuPDHoVEPLbMfCJC]{Malédiction Bestiale}, @Compendium[pf2e.spells-srd.3xD8DYrr8YDVYGg7]{Pierres Piquantes}</li>
-<li><strong>5e</strong> @Compendium[pf2e.spells-srd.MlpbeZ61Euhl0d60]{Cloudkill}, @Compendium[pf2e.spells-srd.zfn5RqAdF63neqpP]{Contrôle de l'eau}</li>
-<li><strong>6ème</strong> @Compendium[pf2e.spells-srd.ayRXv0wQH00TTNZe]{Dard de vers violet}, @Compendium[pf2e.spells-srd.JbAcSLu62TU1OgNF]{Les rampants qui s'emmêlent}</li>
+<li><strong>Tour de magie</strong> @Compendium[pf2e.spells-srd.uZK2BYzPnxUBnDjr]{Entrave}</li>
+<li><strong>Niveau 1</strong> @Compendium[pf2e.spells-srd.r3NeUnsgt9mS03Sn]{Décharge électrique}, @Compendium[pf2e.spells-srd.DYdvMZ8G2LiSLVWw]{Morsure d'araignée}</li>
+<li><strong>Niveau 2</strong> @Compendium[pf2e.spells-srd.2ZdHjnpEQJuqOYSG]{Sphère de feu}, @Compendium[pf2e.spells-srd.cB17yFc9456Pyfec]{Vomir une nuée}</li>
+<li><strong>Niveau 3</strong> @Compendium[pf2e.spells-srd.gPvtmKMRpg9I9D7H]{Cloué à terre}, @Compendium[pf2e.spells-srd.KsWhliKfUs3IpW3c]{Mur d'épines}</li>
+<li><strong>Niveau 4</strong> @Compendium[pf2e.spells-srd.VuPDHoVEPLbMfCJC]{Malédiction bestiale}, @Compendium[pf2e.spells-srd.3xD8DYrr8YDVYGg7]{Piques de pierre}</li>
+<li><strong>Niveau 5</strong> @Compendium[pf2e.spells-srd.MlpbeZ61Euhl0d60]{Nuage mortel}, @Compendium[pf2e.spells-srd.zfn5RqAdF63neqpP]{Contrôle de l'eau}</li>
+<li><strong>Niveau 6</strong> @Compendium[pf2e.spells-srd.ayRXv0wQH00TTNZe]{Dard du ver pourpre}, @Compendium[pf2e.spells-srd.JbAcSLu62TU1OgNF]{Entraves végétales}</li>
 </ul>
