--- a/data/feats/ancestry-05-2kwLzw618QaIHOap.htm
+++ b/data/feats/ancestry-05-2kwLzw618QaIHOap.htm
@@ -1,5 +1,5 @@
 Name: Genie Weapon Flourish
-Nom: Sophistication d'arme de Génie
+Nom: Sophistication d'armes de Génie
 PrereqEN: Genie Weapon Familiarity
 PrereqFR: Familiarité avec les armes des génies
 État: libre
