--- a/data/feats/ancestry-09-cmhfYMEM4uzrNIiV.htm
+++ b/data/feats/ancestry-09-cmhfYMEM4uzrNIiV.htm
@@ -11,4 +11,4 @@ PrereqFR: Ailes évanescentes
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par heure</p>
 <hr />
-<p>Vous ravivez votre magie pour énergiser vos ailes, les transformant temporairement en des formes majestueuses et  scintillantes. Pendant 1 minute, vous obtenez une vitesse de Vole de 9 m.</p>
+<p>Vous ravivez votre magie pour énergiser vos ailes, les transformant temporairement en des formes majestueuses et scintillantes. Pendant 1 minute, vous obtenez une vitesse de Vol de 9 mètres.</p>
