--- a/data/feats/ancestry-09-O2iFrAt7hyELJlIR.htm
+++ b/data/feats/ancestry-09-O2iFrAt7hyELJlIR.htm
@@ -11,5 +11,5 @@ PrereqFR:
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous êtes @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Saisi}, @Compendium[pf2e.conditionitems.eIcWbB5o3pP6OIMe]{Immobilisé} ou @Compendium[pf2e.conditionitems.VcDeM8A5oI6VqhbM]{Entravé}.</p>
 <hr />
-<p>Vous avez une capacité qui vous permet de rapidement vous échapper des effets qui vous entravent. Faites un test pour vous Échapper. En cas de succès, vous pouvez Marchez rapidement, Faire un pas ou porter une Frappe avec une attaque à mains nues qui cible la créature à laquelle vous avez échappé. En cas d'échec, vous tentez de vous Échapper une seconde fois.</p>
+<p>Vous avez la capacité de rapidement vous échapper des effets qui vous entravent. Faites un test pour vous Échapper. En cas de succès, vous pouvez Marchez rapidement, Faire un pas ou porter une Frappe avec une attaque à mains nues qui cible la créature à laquelle vous avez échappé. En cas d'échec, vous tentez de vous Échapper une seconde fois.</p>
 <p>Vous augmentez votre pénalité d'attaque multiple en fonction des actions que vous avez entreprises, mais seulement après avoir terminé les deux actions.</p>
